[gd_scene load_steps=7 format=3 uid="uid://4deoe01fl8ac"]

[ext_resource type="Script" path="res://Scripts/static_platform.gd" id="1_x1877"]
[ext_resource type="Script" path="res://Scripts/static_platform_check.gd" id="2_v47j7"]
[ext_resource type="Texture2D" uid="uid://b0yankjwm6kfl" path="res://Graphics/platform.png" id="3_6rxxy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rvj0u"]
size = Vector2(180, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kk5lh"]
size = Vector2(180, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dsl3n"]
size = Vector2(180, 4)

[node name="platform" type="StaticBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_x1877")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_6rxxy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_rvj0u")
disabled = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_kk5lh")

[node name="static_platform_check" type="Node" parent="."]
script = ExtResource("2_v47j7")

[node name="Check_Death_Area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Check_Death_Area"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_dsl3n")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="Area2D" to="static_platform_check" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="area_exited" from="Area2D" to="static_platform_check" method="_on_area_2d_area_exited"]
[connection signal="dis_call" from="static_platform_check" to="." method="_on_static_platform_check_dis_call"]
[connection signal="show_call" from="static_platform_check" to="." method="_on_static_platform_check_show_call"]
[connection signal="area_entered" from="Check_Death_Area" to="." method="_on_check_death_area_area_entered"]
